syntax = "proto3";

package user.my_network.v1;

import "enums/v1/enums.proto";
import "google/protobuf/timestamp.proto";

service MyNetworkService {
  rpc GetMyReferrals(GetMyReferralsRequest) returns (GetMyReferralsResponse);
  rpc GetTotalTeam(GetTotalTeamRequest) returns (GetTotalTeamResponse);
}

message GetMyReferralsRequest {}

message GetMyReferralsResponse {
  message Referral {
    string id = 1;
    int32 user_id = 2;
    string fullname = 3;
    string email = 4;
    string avatar = 5;
    string country = 6;
    string phone_number = 7;
    google.protobuf.Timestamp created_at = 8;
  }
  repeated Referral referrals = 1;
}

message GetTotalTeamRequest {}

message GetTotalTeamResponse {
  message Team {
    string id = 1;
    int32 user_id = 2;
    int32 referral_id = 3;
    string fullname = 4;
    string email = 5;
    string avatar = 6;
    string country = 7;
    string phone_number = 8;
    enums.v1.UserStatus status = 9;
    google.protobuf.Timestamp created_at = 10;
  }
  repeated Team team = 1;
}
